--- a/calendar.html
+++ b/calendar.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
+<!-- original:https://codepen.io/boudra/pen/raErwP -->
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calendar</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendar</title>
 
-  <style>
-    body {
-      font-family: monospace;
-      margin: 0;
-      padding: 0;
-    }
+    <style>
+        body {
+    font-family: monospace;
 
-    .wrapper {
-      display: block;
-      margin: 0;
-      padding: 0;
-    }
+}
+
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 100%;
 
     #calendar {
       margin: 0;
