--- a/calendar.html
+++ b/calendar.html
@@ -26,15 +26,14 @@
     }
 
     table {
-      border-collapse: collapse;
-      table-layout: fixed;
-      width: 100%;
-      position: relative;
-      background-color: #451C45; /* основний */
-      border: 2px solid #451C45;
-      box-shadow: 2px 2px 1px 0px #DB53D9; /* вторинний */
-      border-radius: 5px;
-      color: #DB53D9; /* вторинний */
+    border-collapse: collapse;
+    table-layout: fixed;
+    position: absolute;
+    background-color: #451C45; /* основний */
+    border: 2px solid #451C45;
+    box-shadow: 2px 2px 1px 0px #DB53D9; /* вторинний */
+    border-radius: 5px;
+    color: #DB53D9; /* вторинний */
     }
 
     .month {
