--- a/calendar.html
+++ b/calendar.html
@@ -36,7 +36,7 @@
     color: #DB53D9; /* вторинний */
     }
 
-    .month {
+     .month {
       background-color: #451C45;
       color: #DB53D9;
       font-size: 1.5em;
@@ -51,8 +51,8 @@
     }
 
     .day-header {
-  background-color: transparent; /* прозорий фон */
-  color: #DB53D9; /* вторинний */
+      background-color: transparent; /* прозорий фон */
+      color: #DB53D9;
     }
 
     td, th {
