--- a/new_calendar.html
+++ b/new_calendar.html
@@ -53,24 +53,20 @@ table {
 
 td,th {
     text-align: center;
-    background-color: #fff;
 }
+
 th {
     padding: 10px;
-    /* background-color: #000000;
-    color: #fff; */
-    /* font-weight: normal; */
 }
-
-
-
 
 td {
     padding: 0;
     border-bottom: 1px solid rgba(0,0,0,0.05);
+    background-color: #191919; /* Notion dark theme background */
 }
+
 td>span {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255); /* White text for contrast */
     padding: 10px;
     display: block;
     border: 2px solid transparent;
