--- a/new_calendar.html
+++ b/new_calendar.html
@@ -28,10 +28,9 @@ table {
     border-collapse: collapse;
     table-layout: fixed;
     position: absolute;
-    background-color: #fff;
     border: 2px solid #451C45;
     box-shadow: 2px 2px 1px 0px #DB53D9;
-    border-radius: 5px;
+    border-radius: 20%;
 }
 
 .month{
