--- a/new_calendar.html
+++ b/new_calendar.html
@@ -30,13 +30,15 @@ table {
     position: absolute;
     border: 2px solid #451C45;
     box-shadow: 2px 2px 1px 0px #DB53D9;
-    border-radius: 20%;
+    border-radius: 20px;
 }
 
 .month{
     background-color: #451C45;
     color: #fff;
     font-size: 1.5em;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 .year {
     font-size: 12px;
