--- a/new_calendar.html
+++ b/new_calendar.html
@@ -31,14 +31,13 @@ table {
     border: 2px solid #451C45;
     box-shadow: 2px 2px 1px 0px #DB53D9;
     border-radius: 20px;
+    overflow: hidden;
 }
 
 .month{
     background-color: #451C45;
     color: #fff;
     font-size: 1.5em;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
 }
 .year {
     font-size: 12px;
