--- a/new_calendar.html
+++ b/new_calendar.html
@@ -28,14 +28,14 @@ table {
     border-collapse: collapse;
     table-layout: fixed;
     position: absolute;
-    border: 2px solid #451C45;
-    box-shadow: 2px 2px 1px 0px #DB53D9;
+    border: 2px solid #94aabe;
+    box-shadow: 2px 2px 1px 0px #5f7f3d;
     border-radius: 20px;
     overflow: hidden;
 }
 
 .month{
-    background-color: #451C45;
+    background-color: #E8EFE2;
     color: #fff;
     font-size: 1.5em;
 }
@@ -48,7 +48,7 @@ table {
 }
 
 .day-header{
-    background-color: #E8B8E8;
+    background-color: #3d5526;
 }
 
 td,th {
@@ -76,7 +76,7 @@ td>span {
 
 td.avui>span {
     font-weight: bold;
-    background-color: #451C45;
+    background-color: #E8EFE2;
     color: #fff;
 }
 td.fora > span {
@@ -85,7 +85,7 @@ td.fora > span {
 
 
 .boto-next, .boto-prev {
-    background: #451C45;
+    background: #E8EFE2;
     color: #fff;
     font-family: inherit;
     border: none;
