--- a/new_calendar.html
+++ b/new_calendar.html
@@ -36,7 +36,7 @@ table {
 
 .month{
     background-color: #E8EFE2;
-    color: #fff;
+    color: #3d5526;
     font-size: 1.5em;
 }
 .year {
@@ -44,7 +44,7 @@ table {
     font-weight: normal;
     display: block;
     text-shadow: none;
-    color: #fff;
+    color: #3d5526;
 }
 
 .day-header{
@@ -77,7 +77,7 @@ td>span {
 td.avui>span {
     font-weight: bold;
     background-color: #E8EFE2;
-    color: #fff;
+    color: #3d5526;
 }
 td.fora > span {
     opacity: 0.2;
@@ -86,7 +86,7 @@ td.fora > span {
 
 .boto-next, .boto-prev {
     background: #E8EFE2;
-    color: #fff;
+    color: #3d5526;
     font-family: inherit;
     border: none;
     font-size: 25px;
